fixed line height in windows cutting off characters

--- a/xml.css
+++ b/xml.css
@@ -5,7 +5,7 @@
 	outline: 0;
 	font-style: inherit;
 	vertical-align: baseline;
-	line-height: 1;
+	line-height: 1.15;
 	list-style: none;
 	border-collapse: separate;
 	border-spacing: 0;
